crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__audit__render_snapshots__dashboard_ui_audit_decision_asc.snap
---
source: crates/clx/src/dashboard/ui/audit.rs
expression: rendered
---
┌ Audit Log (4) ───────────────────────────────────────────────────────────────────────────────────↑
│Time        Decision ▼   Risk     Layer      Command                                  Session     █
│                                                                                                  █
│09:00:02    prompted     -        layer2     git push --force                         sess0001    █
│09:00:04    deferred     20       builtin    cat /etc/hosts                           sess0001    █
│09:00:03    blocked      95       layer1     rm -rf /tmp/x                            sess0001    █
│09:00:01    allowed      5        builtin    ls -la                                   sess0001    █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  ║
│                                                                                                  ║
└──────────────────────────────────────────────────────────────────────────────────────────────────↓
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Select a row to view details                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
