crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__audit__render_snapshots__dashboard_ui_audit_filtered_git.snap
---
source: crates/clx/src/dashboard/ui/audit.rs
expression: rendered
---
┌ Audit Log (1) [filter: GIT] ─────────────────────────────────────────────────────────────────────↑
│Time ▼      Decision     Risk     Layer      Command                                  Session     █
│                                                                                                  █
│09:00:02    prompted     -        layer2     git push --force                         sess0001    █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
│                                                                                                  █
└──────────────────────────────────────────────────────────────────────────────────────────────────↓
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Select a row to view details                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
